tests/baselines/reference/outModuleTripleSlashRefs(strict=true).errors.txt
ref/a.ts(3,2): error TS2564: Property 'member' has no initializer and is not definitely assigned in the constructor.
ref/b.ts(3,2): error TS2564: Property 'member' has no initializer and is not definitely assigned in the constructor.


==== ref/a.ts (1 errors) ====
    /// <reference path="./b.ts" />
    export class A {
    	member: typeof GlobalFoo;
    	~~~~~~
!!! error TS2564: Property 'member' has no initializer and is not definitely assigned in the constructor.
    }
    
==== ref/b.ts (1 errors) ====
    /// <reference path="./c.d.ts" />
    class Foo {
    	member: Bar;
    	~~~~~~
!!! error TS2564: Property 'member' has no initializer and is not definitely assigned in the constructor.
    }
    declare var GlobalFoo: Foo;
    
==== ref/c.d.ts (0 errors) ====
    /// <reference path="./d.d.ts" />
    declare class Bar {
    	member: Baz;
    }
    
==== ref/d.d.ts (0 errors) ====
    declare class Baz {
    	member: number;
    }
    
==== b.ts (0 errors) ====
    import {A} from "./ref/a";
    export class B extends A { }
    